<resources>
    <string name="app_name">SkillsForHire</string>
    <string name="looking_for_a_home_service_provider">Looking for a Home Service Provider?</string>
    <string name="skillsforhire">SkillsForHire</string>
    <string name="searchField">Home Service Provider Name</string>
    <string name="log_in_page">Log In Page</string>
    <string name="user_name">User Name</string>
    <string name="title_activity_signup">signupActivity</string>
    <string name="email">Email</string>
    <string name="sign_up_page">Sign Up Page</string>
    <string name="account_email">Account Email:</string>
    <string name="account_password">Account Password:</string>
    <string name="already_have_an_account_log_in_now">Already have an account? Log in now!</string>
    <string name="hsp_name">HSP Name</string>
    <string name="hsp_status">HSP Status</string>
    <string name="hsp_type">HSP Type</string>
    <string name="home_service_provider_name">Home Service Provider Name</string>
</resources>
