<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/skillsForHireBanner"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/skillsforhire"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/signupActivityBanner"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:text="@string/sign_up_page"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/userEmailInfo"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="230dp"
        android:text="@string/account_email"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/userPasswordInfo"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="300dp"
        android:text="@string/account_password"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="220dp"
        android:layout_marginRight="60dp"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textSize='20sp' />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="290dp"
        android:layout_marginRight="60dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signupActivityLoginButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="Log in" />

    <TextView
        android:id="@+id/loginSignupActivityBanner"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="550dp"
        android:text="@string/already_have_an_account_log_in_now"
        android:textSize="25sp" />
    <Button
        android:id="@+id/signupActivitySignupButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="350dp"
        android:text="Sign Up" />
</RelativeLayout>