<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SearchFunction"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/skillsForHireBanner"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/skillsforhire"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/searchBanner"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:text="@string/looking_for_a_home_service_provider"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/searchField"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="20dp"
        android:inputType="textPersonName"
        android:text="@string/home_service_provider_name"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="325dp"
        android:layout_height="300dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="250dp"
        android:visibility="visible" />



</RelativeLayout>